# metalib-spirv

./: CMakeLists.txt  ReadMe.md
include/: metalib2spirv.h
include/metal/: commands.h  common.h  device.h  enums.h  resource.h
source/: CMakeLists.txt
source/converter/: CMakeLists.txt  metalib.cc  metalib2spirv.cc  metalib2spirv_p.h  spirv_builder.cc  spirv_builder.h  spirv_util.cc  spirv_util.h  spirv_writer.cc
source/impl/: CMakeLists.txt
source/impl/vk/: commands.cpp  common.cpp  device.cpp  pipeline.cpp  resource.cpp
test/: CMakeLists.txt  test_bc_module_to_spirv.cc  test_lib_to_bc.cc
test/shaderlibs/: hybrid_rendering_debug.metallib  hybrid_rendering_release.metallib  modern_renderer_ios_debug.metallib  modern_renderer_ios_release.metallib  modern_renderer_macos_debug.metallib  modern_renderer_macos_release.metallib  sample.ir
